--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "styled-components": "^4.2.1"
+    "react-toastify": "^5.2.1",
+    "styled-components": "^4.2.1",
+    "styled-reset": "^2.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
