--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.4.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
     "graphql": "^14.3.1",
     "react": "^16.8.6",
     "react-apollo-hooks": "^0.4.5",
@@ -22,7 +24,12 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": ["react-app", "airbnb"],
+    "rules": {
+      "react/prefer-stateless-function": 0,
+      "react/jsx-filename-extension": 0,
+      "react/jsx-one-expression-per-line": 0
+    }
   },
   "browserslist": {
     "production": [
